# fuzzing-with-cov-example

./: .gitignore
Demo/: CMakeLists.txt  demo.c  demo_fuzz.c
Hello/: CMakeLists.txt  hello.c  hello.h
